--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet consectetur error ullam excepturi, molestias quas minima, voluptate reiciendis obcaecati vitae expedita repudiandae aut, nisi dolores dolore? Inventore perspiciatis harum fugit.</p>
             </div>
         </div>
-    
+        <button id="button">test</button>
         <div class="row">
             <div class="col">
                 <div class="timeline-steps aos-init aos-animate" data-aos="fade-up">
