--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
         </div>
     </div>
 
+    <section class="container">
+        <section class="col">
+            <div id="dynamic" class="col bg-primary m-5">
+                <label for="start">Start date:</label>
+                <input type="date" id="start" name="trip-start">
+            </div>
+        </section>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
