--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <section class="container">
         <section class="col">
-            <div id="dynamic" class="col bg-primary m-5">
+            <div id="dynamic" class="col m-5">
                 <label for="start">Start date:</label>
                 <input type="date" id="start" name="trip-start">
             </div>
