--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="timeline-step">
                         <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2010">
-                            <div id="stepTree" class="inner-circle"></div>
+                            <div id="stepThree" class="inner-circle"></div>
                             <p class="h6 mt-3 mb-1">Steg 3</p>
                             <p class="h6 text-muted mb-0 mb-lg-0">Gör Din Layout</p>
                         </div>
